@@ -1,3 +1,8 @@
+2007-03-20  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclEnv.c:	Some more ckalloc -> ckrealloc replacements.
+	* generic/tclLink.c:
+
 2007-03-20  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tclDate.c: Rebuilt, despite Donal Fellows's comment when
